--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0-alpha"
+        project.ext.set("archivesBaseName", "MUJ Buddy - " + versionName)
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -31,9 +32,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -41,6 +45,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
 
     // Custom libraires
-    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.13.1' // For HTTP requests
+    implementation 'com.google.code.gson:gson:2.8.5'    // For JSON paring
+    implementation 'com.squareup.picasso:picasso:2.71828'   // For image loading / caching
 }
