--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,32 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.black_dragon74.mujbuddy">
     <!-- Permissions -->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <!-- App config and activity config -->
     <application
             android:allowBackup="true"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/ic_launcher_app"
             android:label="@string/app_name"
             android:roundIcon="@drawable/ic_launcher_app_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-
-
+        <activity
+                android:name=".AboutActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.black_dragon74.mujbuddy.MainActivity"/>
+        </activity>
+        <activity
+                android:name=".SettingsActivity"
+                android:label="@string/title_activity_settings"
+                android:parentActivityName=".MainActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.black_dragon74.mujbuddy.MainActivity"/>
+        </activity>
         <activity android:name=".ContactInfoActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
@@ -63,6 +76,8 @@
         </activity>
         <activity
                 android:name=".LoginActivity"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation|keyboardHidden"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
