--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,20 @@
 
     <application
             android:allowBackup="true"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
             android:icon="@drawable/ic_launcher_app"
             android:label="@string/app_name"
             android:roundIcon="@drawable/ic_launcher_app_round"
+            android:screenOrientation="portrait"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity
-                android:name=".AboutActivity">
+        <activity android:name=".WebauthActivity"
+                  android:configChanges="orientation|keyboardHidden"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity android:name=".AboutActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="com.black_dragon74.mujbuddy.MainActivity"/>
@@ -76,8 +80,8 @@
         </activity>
         <activity
                 android:name=".LoginActivity"
-                android:screenOrientation="portrait"
                 android:configChanges="orientation|keyboardHidden"
+                android:screenOrientation="portrait"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
