--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.black_dragon74.mujbuddy"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 12
-        versionName "1.2-alpha"
+        versionCode 13
+        versionName "1.3-beta"
         project.ext.set("archivesBaseName", "MUJ Buddy - " + versionName)
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
