--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         applicationId "com.black_dragon74.mujbuddy"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 13
-        versionName "1.4-beta"
-        project.ext.set("archivesBaseName", "MUJ Buddy - " + versionName)
+        versionCode 15
+        versionName "1.5-beta"
+        project.ext.set("archivesBaseName", "MUJ_Buddy-" + versionName)
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
