--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'    // For JSON parsing
     implementation 'com.squareup.picasso:picasso:2.71828'   // For image loading / caching
     implementation 'com.github.javiersantos:AppUpdater:2.7' // For app update notifications
+    implementation 'com.codevscolor.materialpreference:mp:0.2.1'    // For dark material pref screen
 }
